# steady

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  lib.rs  main.rs
src/backend/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src/engine/: clickzone.rs  dwell.rs  mod.rs  pipeline.rs  smoothing.rs  stats.rs  tremor.rs
tests/: test_clickzone.rs  test_config.rs  test_dwell.rs  test_pipeline.rs  test_smoothing.rs  test_stats.rs  test_tremor.rs
