[package]
name = "steady"
version = "0.1.0"
edition = "2021"
authors = ["Zanden Kane"]
description = "System-wide motor accessibility daemon that filters pointer input to reduce tremor, smooth movement, and provide dwell-click."
license = "MIT"
repository = "https://github.com/zandenkane/steady"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
] }
